--- a/tests/docker-compose.yaml
+++ b/tests/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     environment:
       ZOO_SERVERS: server.1=0.0.0.0:2888:3888;2181
   cmak:
-    image: panubo/cmak
+    image: panubo/cmak:test
     ports:
       - "9000"
     environment:
