--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -98,6 +98,6 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64 # ,linux/arm64 # ARM unsupported due to https://github.com/adoptium/containers/issues/158
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
