--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,6 +1,6 @@
-# This workflow is based on build-push.yml but contains repo specific changes.
-
-# Panubo build and push to Quay.io and ECR Public
+# Source: https://github.com/panubo/reference-github-actions/blob/main/docker-images/build-push.yml
+#
+# Description: Panubo build and push to Quay.io and ECR Public
 # This GH Action is intended for public docker images that package upstream applications/services (ie not for projects of Panubo's).
 # For repos that build multiple repos use the multi-build-push.yml workflow.
 #
@@ -11,6 +11,8 @@
 # Automated testing is triggered by `make _ci_test`, if no test is required the Makefile target should just run `true`.
 # Before tests are run a Docker build is performed, the resulting image has a tag of "test"
 # BATS is installed since it is commonly required by the tests.
+#
+# LICENSE: MIT License, Copyright (c) 2021-2023 Volt Grid Pty Ltd t/a Panubo
 
 name: build and push on main and tags
 
@@ -112,6 +114,6 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64 # ,linux/arm64 # ARM unsupported due to https://github.com/adoptium/containers/issues/158
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
