--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -38,6 +38,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          submodules: true
 
       - name: Get repo name
         id: image_name
